# Statistico

./: .gitignore  README.md  frontend.sh
backend/: Cargo.toml
backend/migrations/2022-08-18-211602_users/: up.sql
backend/migrations/2022-08-18-211635_statistics/: up.sql
backend/migrations/2022-08-18-211755_objects/: up.sql
backend/src/: main.rs
backend/src/api/: chart_controller.rs  mod.rs  object_controller.rs  statistic_controller.rs
backend/src/database/: db.rs  mod.rs  models.rs
backend/src/ops/: mod.rs  object_ops.rs  statistic_ops.rs  user_ops.rs
backend/src/tests/: mod.rs  ops_test.rs
frontend/: index.html  index.js  statistic.css  statistic.html  statistic.js  stats.css  stats.html  stats.js
