[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
serde = {version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
futures = "0.3.23"
env_logger = "0.9.0"
log = "0.4.17"
diesel = { version = "^1.4.8", features = ["sqlite"] }
dotenvy = "0.15.1"
actix-cors = "0.6.2"
serial_test = "0.9.0"
charts = "0.3.0"